--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,87 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.background {
+  background-image: url(../images/bgtile.png);
+  height: 300px;
+  background-repeat:repeat-x;
+  background-position: left top;
+  padding:100px;
+}
+.phone{
+  float:left;
+  width: 40%;
+}
+.content {
+  float:left;
+  width: 60%;
+  padding-top: 20px;
+}
+footer {
+  clear: both;
+  text-align: center;
+  padding-top: 50px;
+}
+.whitebg {
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;;
+  clear: both;
+  padding: 20px 40px;
+}
+ul {
+  list-style: none;
+  display: inline;
+  padding: 0;
+
+}
+li {
+  margin: 5px 10px;
+  display: inline;
+  text-transform: uppercase;
+  color: #678ba8;
+  font-weight: bold;
+  font-size: 10px;
+}
+li:last-child {
+  color: #adadae;
+  margin-left: 20px;
+}
+.logo {
+  float: left;
+}
+.btn-login {
+  float: right;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7094b0+0,477396+100 */
+  background: #7094b0; /* Old browsers */
+  background: -moz-linear-gradient(top, #7094b0 0%, #477396 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #7094b0 0%,#477396 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #7094b0 0%,#477396 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7094b0', endColorstr='#477396',GradientType=0 ); /* IE6-9 */
+
+  border:1px solid #195380;
+  color: #fff;
+  border-radius: 4px;
+  padding: 2px 10px 8px;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 12px;
+  margin-top: 20px;
+}
+.btn-login img {
+  position: relative;
+  top: 5px;
+  margin-right: 10px;
+}
+h1 {
+  color: #123a5c;
+  font-size: 24px;
+  line-height: 30px;
+}
+.whitebg p {
+  font-size: 14px;
+}
+.googlePlay {
+  margin-left: 20px;
+}
