--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,85 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.footer {
+  text-decoration: none;
+  /* padding-left: 9px; */
+  margin-left: 25px;
+  margin-top: 50px;
+  /* text-align: center; */
+  position: relative;
+  left: 29%;
+}
+.footer a{
+  padding-right: 10px;
+}
+
+
+
+#copyright{
+
+}
+
+.background-blue {
+  height: 300px;
+  background-image: url("../images/bgtile.png");
+
+}
+
+.instapic {
+position: relative;
+top: -200px;
+right: 300px;
+width: 300px;
+}
+
+.instainfo {
+  padding: 20px;
+  float: left;
+  width: 450px;
+  position: relative;
+  left: 550px;
+  bottom: 100px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+}
+
+.header-info {
+ position: relative;
+ left: 80px;
+ font-size: 20px;
+ color: #06365f;
+ margin-bottom: 100px;
+}
+
+.info-page {
+  position: relative;
+  float: right;
+
+}
+
+.insta-logo {
+  float: right;
+  position: relative;
+  right: 630px;
+  width: 250px;
+  bottom: 161px;
+}
+
+.body-text {
+  position: relative;
+  top: 300px;
+  width: 200px
+}
+
+.home {
+  position: relative;
+  bottom: 630px;
+  left: 900px;
+
+}
+.footer {
+  color: gray;
+  margin-bottom: 100px;
+}
