--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,83 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+#backgroundTile {
+  position: absolute;
+  width:100%;
+  height:280px;
+  background-image: url("../images/bgtile.png");
+}
+#overlappingBox{
+  position: absolute;
+  width: 80%;
+  margin: 10%;
+}
+
+#phoneImg{
+  width:318px;
+  height:512px;
+  background-image: url("../images/phones.png");
+  float:left;
+}
+
+#title{
+  margin-left: 50px;
+  float:left;
+  width:520px;
+}
+
+#loginBtn{
+  width:115px;
+  height:80px;
+  float: right;
+  padding: 20px 0 0 90px;
+}
+
+button{
+  background-color: #1c5380;
+  border: 1px solid #06365f;
+  border-radius: 3px;
+  height:40px;
+  width: 90px;
+  font-size: 16px;
+  color: white;
+}
+#whiteBox{
+  background-image: url("../images/frame.png");
+  width:504px;
+  height: 284px;
+  padding: 20px 30px;
+  box-sizing: border-box;
+  margin:100px 365px;
+}
+
+#header{
+  font-size: 25px;
+  color: #06365f;
+  font-weight: bold;
+}
+#icons{
+  margin-top: 30px;
+}
+.download{
+  margin:10px;
+}
+
+#footer{
+  position: relative;
+  clear:both;
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-top: 70px;
+  font-size: 13px;
+  margin-right: 15%;
+}
+
+a{
+  color: #1c5380;
+}
+
+span {
+  color: gray;
+}
